k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: secscan
  labels:
    app: secscan
spec:
  type: ClusterIP
  selector:
    app: secscan
  ports:
    - name: http
      port: 80
      targetPort: 8000
